--- a/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer.phtml
+++ b/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer.phtml
@@ -9,7 +9,7 @@
     <?php echo $this->__('Magento&trade; is a trademark of Magento Inc.<br/>Copyright &copy; %s Magento Inc.', date('Y')) ?>
 </p>
 
-<a href="#"><?php echo $this->__('Magento ver. %s', Mage::getVersion()); ?></a>
+<?php echo $this->getChildHtml('patches'); ?>
 
 <script type="text/javascript">
     $('footer_bug_tracking').target = 'Varien_External';
