added presentation logic to display patches in adminhtml

--- a/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer.phtml
+++ b/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer.phtml
@@ -9,6 +9,7 @@
     <?php echo $this->__('Magento&trade; is a trademark of Magento Inc.<br/>Copyright &copy; %s Magento Inc.', date('Y')) ?>
 </p>
 
+<?php echo $this->__('Magento ver. %s', Mage::getVersion()); ?>
 <?php echo $this->getChildHtml('patches'); ?>
 
 <script type="text/javascript">
