--- a/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer/patches.phtml
+++ b/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer/patches.phtml
@@ -1,8 +1,9 @@
 <?php /** @var Untitled_AppliedPatches_Block_Patches $this */ ?>
 <?php if($this->hasPatches()): ?>
-    <ul>
-        <li>PATCH</li>
-    </ul>
-<?php else: ?>
-    <?php echo $this->__('Magento ver. %s', Mage::getVersion()); ?>
+    <div>
+        <b><?php echo $this->__('Applied Patches'); ?>: </b>
+        <?php foreach($this->getAppliedPatches() as $patchName): ?>
+            <a href="#"><?php echo $patchName; ?></a>, 
+        <?php endforeach; ?>
+    </div>
 <?php endif; ?>
