--- a/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer/patches.phtml
+++ b/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer/patches.phtml
@@ -1,29 +1,25 @@
 <?php /** @var Untitled_AppliedPatches_Block_Patches $this */ ?>
-<?php if($this->hasPatches()): ?>
-    <script>
-        function loadWindow(name) {
-            var dialogWindow = Dialog.info(name, {
-                draggable: true,
-                resizable: true,
-                closable: true,
-                className: "magento",
-                windowClassName: "popup-window",
-                title:  'Patch Info: ' + name,
-                top: 50,
-                width: 350,
-                height: 350,
-                zIndex: 1000,
-                recenterAuto: false,
-                hideEffect: Element.hide,
-                showEffect: Element.show,
-                id: "untitled-appliedpatches-dialog"
-            });
-        }
-    </script>
-    <div>
+<?php if ($this->hasPatches()): ?>
+    <div id="untitled-appliedpatches">
         <b><?php echo $this->__('Applied Patches'); ?>: </b>
-        <?php foreach($this->getAppliedPatches() as $patch): ?>
-            <a href="#" onclick="loadWindow('<?php echo $patch['name']; ?>');"><?php echo $patch['name']; ?></a>,
+        <?php foreach ($this->getAppliedPatches() as $patch): ?>
+            <a href="#"
+                data-patch-name="<?php echo $patch['name']; ?>"
+                data-patch-applied-date="<?php echo $patch['appliedOnDate']; ?>">
+                <?php echo $patch['name']; ?>
+            </a><?php echo $this->getIsLast($patch); ?>
         <?php endforeach; ?>
     </div>
+    <script>
+        document.observe("dom:loaded", function() {
+            $('untitled-appliedpatches').observe('click', function(event) {
+                var el = event.findElement('a');
+                if(el) {
+                    var patchName = el.readAttribute('data-patch-name') || '',
+                        patchDateRevertedOn = el.readAttribute('data-patch-applied-date') || '';
+                    new UntitledAppliedPatches.dialog(patchName, patchDateRevertedOn).openDialogWindow();
+                }
+            });
+        });
+    </script>
 <?php endif; ?>
