--- a/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer.phtml
+++ b/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer.phtml
@@ -1,3 +1,18 @@
+<?php
+/**
+ * Un.titled
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the MIT License, that is bundled with this
+ * package in the file LICENSE.
+ * It is also available through the world-wide-web at this URL:
+ *
+ * http://opensource.org/licenses/MIT
+ *
+ * @copyright  Copyright (c) 2015 Un.titled and contributors.
+ */
+?>
 <?php /** @var Mage_Adminhtml_Block_Page_Footer $this */ ?>
 <p class="bug-report">
     <a href="<?php echo $this->getBugreportUrl() ?>" id="footer_bug_tracking"><?php echo $this->__('Help Us Keep Magento Healthy - Report All Bugs') ?></a><br/>
