--- a/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer/patches.phtml
+++ b/app/design/adminhtml/default/default/template/untitled/appliedpatches/footer/patches.phtml
@@ -1,3 +1,18 @@
+<?php
+/**
+ * Un.titled
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the MIT License, that is bundled with this
+ * package in the file LICENSE.
+ * It is also available through the world-wide-web at this URL:
+ *
+ * http://opensource.org/licenses/MIT
+ *
+ * @copyright  Copyright (c) 2015 Un.titled and contributors.
+ */
+?>
 <?php /** @var Untitled_AppliedPatches_Block_Patches $this */ ?>
 <?php if ($this->hasPatches()): ?>
     <div id="untitled-appliedpatches">
